
libsysrepocpp_includes = include_directories('../headers')

libsysrepocpp_sources = [
    'Connection.cpp',
    'Internal.cpp',
    'Session.cpp',
    'Struct.cpp',
    'Sysrepo.cpp',
    'Xpath.cpp'
]

libsysrepocpp_sources_with_path = []

foreach i : libsysrepocpp_sources
    libsysrepocpp_sources_with_path += './libsysrepocpp/source/' + i
endforeach

