libyangcpp_includes = include_directories('../headers')

libyangcpp_sources = [
    'Internal.cpp',
    'Libyang.cpp',
    'Tree_Data.cpp',
    'Tree_Schema.cpp',
    'Xml.cpp'
]

libyangcpp_sources_with_path = []

foreach i : libyangcpp_sources
    libyangcpp_sources_with_path += './libyangcpp/source/' + i
endforeach




