libyangextension_includes = include_directories('../headers', '../models')

libyangextension_sources = [
    'common.c',
    'context.c',
    'hash_table.c',
    'log.c',
    'parser_json.c',
    'parser_lyb.c',
    'parser_xml.c',
    'parser_yang_bis.c',
    'parser_yang_lex.c',
    'parser_yang.c',
    'parser_yin.c',
    'parser.c',
    'plugins.c',
    'printer_info.c',
    'printer_json_schema.c',
    'printer_json.c',
    'printer_lyb.c',
    'printer_tree.c',
    'printer_xml.c',
    'printer_yang.c',
    'printer_yin.c',
    'printer.c',
    'resolve.c',
    'tree_data.c',
    'tree_schema.c',
    'validation.c',
    'xml.c',
    'xpath.c',
    'yang_types.c'
]

libyangextension_sources_with_path = []

foreach i : libyangextension_sources
    libyangextension_sources_with_path += './libyangextension/source/' + i
endforeach




